fix: change menu spacing to between from around
refs: fbcss

--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -28,5 +28,5 @@
   width: 900px;
   /* multiple item distribution */
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
